--- a/packages/xgplayer/src/style/player/defination.scss
+++ b/packages/xgplayer/src/style/player/defination.scss
@@ -1,4 +1,4 @@
-.xgplayer-definition{
+.hkplayer-definition{
   order: 5;
   width: 60px;
   height: 150px;
@@ -24,7 +24,7 @@
     margin-left: -10px;
     z-index: 26;
     cursor: pointer;
-    @at-root .xgplayer.xgplayer-definition-active &{
+    @at-root .hkplayer.hkplayer-definition-active &{
       display: block;
     }
     li{
@@ -61,7 +61,7 @@
     display:inline-block;
     vertical-align:middle;
   }
-  @at-root .xgplayer-is-definition &{
+  @at-root .hkplayer-is-definition &{
     display: block;
   }
 }
