--- a/packages/xgplayer/src/style/player/playback.scss
+++ b/packages/xgplayer/src/style/player/playback.scss
@@ -1,4 +1,4 @@
-.xgplayer-playback{
+.hkplayer-playback{
   order: 8;
   position: relative;
   outline: none;
@@ -24,7 +24,7 @@
     }
   }
   &:hover {
-    .xgplayer-tips {
+    .hkplayer-tips {
       display: block;
       top: -40px;
     }
