--- a/packages/xgplayer/src/style/player/cssFullscreen.scss
+++ b/packages/xgplayer/src/style/player/cssFullscreen.scss
@@ -4,7 +4,7 @@
     display: inline-block;
     cursor: pointer;
     opacity: 0.9;
-    .xgplayer-icon {
+    .hkplayer-icon {
         svg {
             position: relative;
             top: 50%;
@@ -13,7 +13,7 @@
         }
     }
     &:hover {
-        .xgplayer-tips {
+        .hkplayer-tips {
             display: block;
         }
     }
