--- a/packages/xgplayer/src/style/player/error.scss
+++ b/packages/xgplayer/src/style/player/error.scss
@@ -1,4 +1,4 @@
-.xgplayer-error {
+.hkplayer-error {
   background: $errorBgColor;
   display: none;
   position: absolute;
@@ -14,15 +14,15 @@
   line-height: 100%;
   justify-content: center;
   align-items: center;
-  .xgplayer-error-refresh{
+  .hkplayer-error-refresh{
     color: $errorRefreshColor;
     padding: 0 3px;
     cursor: pointer;
   }
-  @at-root .xgplayer-is-error &{
+  @at-root .hkplayer-is-error &{
     display: flex;
   }
-  .xgplayer-error-text{
+  .hkplayer-error-text{
     line-height: 18px;
     margin: auto 6px;
   }
