--- a/packages/xgplayer/src/style/player/mobile.scss
+++ b/packages/xgplayer/src/style/player/mobile.scss
@@ -1,33 +1,33 @@
-.xgplayer-mobile{
-  .xgplayer-progress-btn{
+.hkplayer-mobile{
+  .hkplayer-progress-btn{
     display: block
   }
-  .xgplayer-progress:hover,.xgplayer-progress:focus{
-    .xgplayer-progress-outer{
+  .hkplayer-progress:hover,.hkplayer-progress:focus{
+    .hkplayer-progress-outer{
       height: 3px;
       margin-top: 8.5px;
     }
-    .xgplayer-progress-dot{
+    .hkplayer-progress-dot{
       height: 3px;
     }
   }
-  &.xgplayer-ended{
-    .xgplayer-start{
+  &.hkplayer-ended{
+    .hkplayer-start{
       display: none;
     }
-    .xgplayer-start-img{
-      display: none;
-    }
-  }
-  &.xgplayer-inactive{
-    .xgplayer-start{
-      display: none;
-    }
-    .xgplayer-start-img{
+    .hkplayer-start-img{
       display: none;
     }
   }
-  .xgplayer-start{
+  &.hkplayer-inactive{
+    .hkplayer-start{
+      display: none;
+    }
+    .hkplayer-start-img{
+      display: none;
+    }
+  }
+  .hkplayer-start{
     width: 60px;
     height: 60px;
     line-height: 60px;
@@ -37,35 +37,35 @@
       margin: 10px;
     }
   }
-  .xgplayer-start-img{
+  .hkplayer-start-img{
     display: none;
   }
-  .xgplayer-tips{
+  .hkplayer-tips{
     display: none !important;
   }
-  &.xgplayer-nostart{
-    .xgplayer-start{
+  &.hkplayer-nostart{
+    .hkplayer-start{
       margin: -30px auto auto -30px;
       display: block;
     }
-    .xgplayer-start-img{
+    .hkplayer-start-img{
       display: block;
     }
   }
-  & .xgplayer-loading{
+  & .hkplayer-loading{
     transform: scale(0.5)
   }
-  &.xgplayer-mobile-npassed{
-    .xgplayer-controls{
+  &.hkplayer-mobile-npassed{
+    .hkplayer-controls{
       display: none;
     }
-    .xgplayer-poster{
+    .hkplayer-poster{
       display: none;
     }
-    .xgplayer-start{
+    .hkplayer-start{
       display: none;
     }
-    .xgplayer-start-img{
+    .hkplayer-start-img{
       display: none;
     }
   }
