--- a/packages/xgplayer/src/style/player/playNext.scss
+++ b/packages/xgplayer/src/style/player/playNext.scss
@@ -1,4 +1,4 @@
-.xgplayer-playNext, .xgplayer-playNext-img {
+.hkplayer-playNext, .hkplayer-playNext-img {
     order: 1;
     cursor: pointer;
     &:hover{
